WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132973
[MSE] Crash at WebCore::SourceBuffer::~SourceBuffer + 110
https://bugs.webkit.org/show_bug.cgi?id=132973
Summary
[MSE] Crash at WebCore::SourceBuffer::~SourceBuffer + 110
Jer Noble
Reported
2014-05-15 16:03:41 PDT
[MSE] Crash at WebCore::SourceBuffer::~SourceBuffer + 110
Attachments
Patch
(3.44 KB, patch)
2014-05-15 16:15 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(3.44 KB, patch)
2014-05-15 16:15 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(15.04 KB, patch)
2014-05-15 22:03 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(16.01 KB, patch)
2014-05-16 09:47 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(16.63 KB, patch)
2014-05-16 10:29 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-05-15 16:15:07 PDT
Created
attachment 231539
[details]
Patch
Jer Noble
Comment 2
2014-05-15 16:15:45 PDT
Created
attachment 231540
[details]
Patch
Jer Noble
Comment 3
2014-05-15 22:03:06 PDT
Created
attachment 231557
[details]
Patch
Jer Noble
Comment 4
2014-05-16 09:47:52 PDT
Created
attachment 231578
[details]
Patch
Jer Noble
Comment 5
2014-05-16 10:29:49 PDT
Created
attachment 231579
[details]
Patch
Eric Carlson
Comment 6
2014-05-16 11:45:02 PDT
Comment on
attachment 231579
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231579&action=review
> Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:529 > + [parser appendStreamData:nsData.get()];
Nit: is there any reason to append the data if weakThis is already NULL?
Jer Noble
Comment 7
2014-05-16 12:15:25 PDT
Comment on
attachment 231579
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231579&action=review
>> Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:529 >> + [parser appendStreamData:nsData.get()]; > > Nit: is there any reason to append the data if weakThis is already NULL?
We can't call WeakPtr.get() off the main thread, due to the way WeakPtrs work. So there's no way to check within this part of the call.
WebKit Commit Bot
Comment 8
2014-05-16 12:45:45 PDT
Comment on
attachment 231579
[details]
Patch Clearing flags on attachment: 231579 Committed
r168974
: <
http://trac.webkit.org/changeset/168974
>
WebKit Commit Bot
Comment 9
2014-05-16 12:45:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug